--- a/Cotacao/Views/Mercados/Details.cshtml
+++ b/Cotacao/Views/Mercados/Details.cshtml
@@ -9,15 +9,14 @@
         <h2>@ViewBag.Mercado</h2>
     </div>
     <div class="row">
-        <a class="btn btn-primary" href="/Cotacoes/Create?mercadoId=@ViewBag.MercadoId">Nova Cotação</a>
+        @Html.Partial("_CadastroCotacao")
     </div>
-    <div class="col-lg-12 row">
-        @foreach (var item in Model)
-        {
-            <div class="col-lg-2">
-                <a class="btn btn-primary btn-lg btn-block dataitem" style="margin:5px" href="/Cotacoes/Details/@Html.DisplayFor(modelItem => item.Id)">@Html.DisplayFor(modelItem => item.Date)</a>
-            </div>
-        }
+    <br />
+    <div class="panel panel-primary">
+        <div class="panel-heading">Cotações</div>
+        <div class="panel-body" id="divCotacoes">
+           
+        </div>
     </div>
     <div class="row">
         <a class="btn btn-primary" href="/Mercados">Voltar</a>
@@ -26,6 +25,56 @@
 
 @section Scripts {
     <script>
-        $(".dataitem").mask("99/99/9999");
+        function carregaCotacoes() {
+
+            // limpa os registros da divCotacoes
+            $("#divCotacoes").empty();
+
+            //Busca os mercados no controller e adiciona na divCotacoes
+            $.ajax({
+                dataType: "json",
+                type: "GET",
+                url: "/cotacoes/GetCotacoes",
+                data: "idMercado=" + $("#MercadoId").val(),
+                async: false,
+                success: function (dados) {
+                    $(dados).each(function (i) {
+                        $("#divCotacoes").append("<div class='col-lg-2'><a class='btn btn-primary btn-lg btn-block dataitem' style='margin:5px' href='/Cotacoes/Details/" + dados[i].Id + "'>" + dados[i].Date +"</a></div>");
+                    });
+                }
+            });
+        };
+
+        $(function () {
+            $("#btnBusca").click(function () {
+                carregaCotacoes();
+            });
+            $(".dataitem").mask("99/99/9999");
+            carregaCotacoes();
+
+            //Cadastra Mercado
+            $("#btnCadastrar").click(function () {
+                if ($("#Date").val() == "") {
+                    alert("Informe uma Data!")
+                } else {
+                    dados = $("#formCadastro").serialize();
+
+                    $.ajax({
+                        url: "/cotacoes/addCotacao",
+                        async: false,
+                        data: dados,
+                        method: 'POST',
+                        success: function (retorno) {
+                            carregaCotacoes();
+                            $("#Date").val("");
+                        },
+                        error: function (err) {
+                            console.log(err);
+                        }
+
+                    });
+                }
+            });
+        });
     </script>
 }
