--- a/Cotacao/Views/Mercados/Index.cshtml
+++ b/Cotacao/Views/Mercados/Index.cshtml
@@ -3,7 +3,6 @@
 @{
     ViewBag.Title = "Mercado";
 }
-
 <div class="container">
     <div class="row jumbotron">
         <h2>Mercados</h2>
@@ -12,7 +11,14 @@
         @Html.Partial("_CadastroMercado")
     </div>
     <br />
-    <div class="col-lg-12" id="divMercados">
+    <div class="panel panel-primary">
+        <div class="panel-heading">Mercados</div>
+        <div class="panel-body" id="divMercados">
+
+        </div>
+    </div>
+    <div class="row">
+        <a class="btn btn-primary" href="/">Voltar</a>
     </div>
 </div>
 
@@ -28,10 +34,13 @@
                 dataType: "json",
                 type: "GET",
                 url: "/mercados/GetMercados",
+                async: false,
                 success: function (dados) {
                     $(dados).each(function (i) {
                         $("#divMercados").append("<div class='col-lg-3'><a class='btn btn-primary btn-lg btn-block' style='margin:5px' href='Mercados/Details/" + dados[i].Id + "'>" + dados[i].Nome+"</a></div>");
                     });
+                }, error: function (err) {
+                    console.log(err);
                 }
             });
         };
