--- a/Cotacao/Views/Home/_HomeAdm.cshtml
+++ b/Cotacao/Views/Home/_HomeAdm.cshtml
@@ -1,18 +1,29 @@
-﻿<div class="container">
-    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-        <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingOne">
-                <h4 class="panel-title">
-                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        Participantes
-                    </a>
-                </h4>
-            </div>
-            <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-                <div class="panel-body">
-                    @Html.Partial("_Integrantes")
+﻿<div class="panel panel-primary" id="divAdminPanel">
+    <div class="panel-heading">Admin</div>
+    <div class="panel-body" id="divAdminPanelBody">
+
+        <div class="panel panel-default" id="divPanelUsuarios">
+            <div class="panel-body">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h3>Usuarios</h3>
+                    </div>
+                    <div class="col-lg-12">
+                        <table class="table table-striped table-bordered" id="tblUsuarios">
+                            <thead>
+                                <tr>
+                                    <th>Email</th>
+                                    <th>Cotações</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
+
     </div>
 </div>
