--- a/Cotacao/Views/Home/Index.cshtml
+++ b/Cotacao/Views/Home/Index.cshtml
@@ -39,7 +39,77 @@
                         $("#tblUsuarios tbody").append(
                             "<tr>" +
                                 "<td>" + dados[i].Email + "</td>" +
-                                "<td>O</td>" +
+                            "</tr>");
+                    });
+                }, error: function (err) {
+                    console.log(err);
+                }
+            });
+            $("#tblCotacoes tbody").empty();
+            $("#divPanelCotacoes").hide();
+            $("#tblItens tbody").empty();
+            $("#divPanelItens").hide();
+        }
+
+        function carregaCotacoes(usuario) {
+
+            // limpa os registros da divCotacoes
+            $("#tblCotacoes tbody").empty();
+
+            //Busca os mercados no controller e adiciona na divCotacoes
+            $.ajax({
+                dataType: "json",
+                type: "GET",
+                url: "/cotacoes/GetCotacoesPorUsuario",
+                data: "usuario=" + usuario,
+                async: false,
+                success: function (dados) {
+                    if (dados.length > 0) {
+                        $("#divPanelCotacoes").show();
+                    } else {
+                        $("#divPanelCotacoes").hide();
+                    }
+                    $(dados).each(function (i) {
+                        $("#tblCotacoes tbody").append(
+                            "<tr class='trCotacao'>" +
+                            "<td style='display: none'>" + dados[i].Id + "</td>" +
+                            "<td>" + dados[i].Date + "</td>" +
+                            "</tr>");
+                    });
+                }
+            });
+            $(".trCotacao").click(function () {
+                var tr = $(this).closest('tr');
+                var cotacaoId = tr.children("td:nth-child(1)").html();
+                carregaItens(cotacaoId);
+            });
+            $("#tblItens tbody").empty();
+            $("#divPanelItens").hide();
+        };
+
+        function carregaItens(cotacaoID) {
+            // limpa os registros da tblItens
+            $("#tblItens tbody").empty();
+
+            //Busca os itens no controller e adiciona na tblItens
+            $.ajax({
+                dataType: "json",
+                type: "GET",
+                url: "/itens/GetItens",
+                data: "idCotacao=" + cotacaoID,
+                async: false,
+                success: function (dados) {
+                    if (dados.length > 0) {
+                        $("#divPanelItens").show();
+                    } else {
+                        $("#divPanelItens").hide();
+                    }
+                    $(dados).each(function (i) {
+                        $("#tblItens tbody").append(
+                            "<tr>" +
+                            "<td>" + dados[i].Nome + "</td>" +
+                            "<td>" + dados[i].QtdEmbalagem + "</td>" +
+                            "<td>" + dados[i].ValorTotal + "</td>" +
                             "</tr>");
                     });
                 }, error: function (err) {
@@ -48,8 +118,15 @@
             });
         }
 
+
         $(function () {
             carregaUsuarios();
+
+            $("#tblUsuarios tbody tr td").click(function () {
+                var usuario = $(this).html();
+                carregaCotacoes(usuario);
+            });
+
         })
     </script>
 }
