--- a/Cotacao/Views/Home/_HomeAdm.cshtml
+++ b/Cotacao/Views/Home/_HomeAdm.cshtml
@@ -1,29 +1,68 @@
 ﻿<div class="panel panel-primary" id="divAdminPanel">
     <div class="panel-heading">Admin</div>
     <div class="panel-body" id="divAdminPanelBody">
-
-        <div class="panel panel-default" id="divPanelUsuarios">
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h3>Usuarios</h3>
-                    </div>
-                    <div class="col-lg-12">
-                        <table class="table table-striped table-bordered" id="tblUsuarios">
+        <div class="row">
+            <div class="col-lg-5">
+                <div class="panel panel-info" id="divPanelUsuarios">
+                    <div class="panel-heading">Usuarios</div>
+                    <div class="panel-body" style="max-height:400px;overflow-y:auto;">
+                        <table class="table table-striped table-bordered table-hover table-responsive" id="tblUsuarios">
                             <thead>
                                 <tr>
                                     <th>Email</th>
-                                    <th>Cotações</th>
+                                </tr>
+                            </thead>
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div class="panel panel-info" id="divPanelCotacoes">
+                    <div class="panel-heading">Cotações</div>
+                    <div class="panel-body" style="max-height:400px;overflow-y:auto;">
+                        <div>
+                            <table class="table table-striped table-bordered table-hover table-responsive" id="tblCotacoes">
+                                <thead>
+                                    <tr>
+                                        <th style="display:none">Id</th="display:none">
+                                        <th>Data</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td style="display:none">1</td>
+                                        <td>99/99/999</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-5">
+                <div class="panel panel-info" id="divPanelItens">
+                    <div class="panel-heading">Itens</div>
+                    <div class="panel-body"  style="max-height:400px;overflow-y:auto;">
+                        <table class="table table-striped table-bordered table-hover table-responsive" id="tblItens">
+                            <thead>
+                                <tr>
+                                    <th>Produto</th>
+                                    <th>Embalagem</th>
+                                    <th>Valor</th>
                                 </tr>
                             </thead>
                             <tbody>
-
+                                <tr>
+                                    <td>Coca Cola 2L</td>
+                                    <td>1</td>
+                                    <td>12,05</td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 </div>
